# IBSSM

./: .gitignore  Dockerfile  README.md  collect_results.py  ds_config.json  ds_stage3.json  eval_fidelity.py  eval_harness.py  eval_robustness.py  finetune.py  posttrain.py  prepare_data.py  pretrain.py  pyproject.toml  requirements.txt  results.md  robust.csv  utils.py
assets/: lm_eval.md
data/: sft_data.py
ibm2_source/: __init__.py  configuration_ibm2.py  modeling_ibm2.py
script/: eval.sh  harness.sh  posttrain.sh  pretrain.sh  robustness.sh  train.sh
source_code/hybrid_gated_deltanet/: __init__.py  configuration_hybrid_gated_deltanet.py  modeling_hybrid_gated_deltanet.py
source_code/hybrid_ibm2/: __init__.py  configuration_hybrid_ibm2.py  modeling_hybrid_ibm2.py
source_code/hybrid_mamba2/: __init__.py  configuration_hybrid_mamba2.py  modeling_hybrid_mamba2.py
source_code/ibm2/: __init__.py  configuration_ibm2.py  modeling_ibm2.py
tests/: test_ibm2_ib_training_paths.py
utils/: convert_hf.py
